[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "paytmchecksum>=1.7.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "sift-stack-py>=0.9.6",
    "telegram>=0.0.1",
]
